tests/reference/asr-test_list_concat-41d186f.stderr
semantic error: Both the lists should be of the same type for concatenation.
 --> tests/errors/test_list_concat.py:8:3
  |
8 |   a += b
  |   ^    ^ type mismatch ('list[i32]' and 'list[f64]')
